// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageNetwork should display the network page with data and the blocks table 1`] = `
<tmpage-stub
  data-title="Network"
  loaded="true"
  managed="true"
  subtitle=""
  title=""
>
  <template>
    <div
      class="page-profile__header page-profile__section network"
    >
      <div
        class="row"
      >
        <div
          class="page-profile__header__info"
        >
          <div
            class="page-profile__status-and-title"
          >
            <span
              class="page-profile__status green"
            />
             
            <h2
              class="page-profile__title"
            >
              
              gaia-20k
            
            </h2>
          </div>
        </div>
      </div>
       
      <div
        class="row"
      >
        <dl
          class="info_dl colored_dl"
        >
          <dt>
            Block Height
          </dt>
           
          <dd>
            #6,001
          </dd>
        </dl>
         
        <dl
          class="info_dl colored_dl"
        >
          <dt>
            Last Block
          </dt>
           
          <dd>
            a few seconds ago
          </dd>
        </dl>
         
        <dl
          class="info_dl colored_dl"
        >
          <dt>
            Transactions
          </dt>
           
          <dd>
            108
          </dd>
        </dl>
         
        <dl
          class="info_dl colored_dl"
        >
          <dt>
            Number of Validators
          </dt>
           
          <dd>
            
            1
          
          </dd>
        </dl>
      </div>
       
      <div
        class="row"
      >
        <div
          class="column"
        >
          <dl
            class="info_dl"
          >
            <dt>
              Total Liquid STAKE
            </dt>
             
            <dd
              id="loose_tokens"
            >
              
              9,008.256
            
            </dd>
          </dl>
        </div>
         
        <div
          class="column"
        >
          <dl
            class="info_dl"
          >
            <dt>
              Total Delegated STAKE
            </dt>
             
            <dd
              id="bonded_tokens"
            >
              
              18,056.799
            
            </dd>
          </dl>
        </div>
      </div>
    </div>
     
    <table
      class="blocks data-table"
    >
      <thead>
        <panelsort-stub
          properties="[object Object],[object Object]"
        />
      </thead>
       
      <tbody>
        <!---->
         
        <tr
          class="block data-table__row"
        >
          <td>
            <router-link-stub
              to="[object Object]"
            >
              
              #100
            
            </router-link-stub>
          </td>
           
          <td>
            1200
          </td>
        </tr>
        <tr
          class="block data-table__row"
        >
          <td>
            <router-link-stub
              to="[object Object]"
            >
              
              #101
            
            </router-link-stub>
          </td>
           
          <td>
            405
          </td>
        </tr>
      </tbody>
    </table>
  </template>
</tmpage-stub>
`;

exports[`PageNetwork should display the network page with the blocks table in a loading state 1`] = `
<tmpage-stub
  data-title="Network"
  loaded="true"
  managed="true"
  subtitle=""
  title=""
>
  <template>
    <div
      class="page-profile__header page-profile__section network"
    >
      <div
        class="row"
      >
        <div
          class="page-profile__header__info"
        >
          <div
            class="page-profile__status-and-title"
          >
            <span
              class="page-profile__status green"
            />
             
            <h2
              class="page-profile__title"
            >
              
              gaia-20k
            
            </h2>
          </div>
        </div>
      </div>
       
      <div
        class="row"
      >
        <dl
          class="info_dl colored_dl"
        >
          <dt>
            Block Height
          </dt>
           
          <dd>
            #6,001
          </dd>
        </dl>
         
        <dl
          class="info_dl colored_dl"
        >
          <dt>
            Last Block
          </dt>
           
          <dd>
            a few seconds ago
          </dd>
        </dl>
         
        <dl
          class="info_dl colored_dl"
        >
          <dt>
            Transactions
          </dt>
           
          <dd>
            108
          </dd>
        </dl>
         
        <dl
          class="info_dl colored_dl"
        >
          <dt>
            Number of Validators
          </dt>
           
          <dd>
            
            1
          
          </dd>
        </dl>
      </div>
       
      <div
        class="row"
      >
        <div
          class="column"
        >
          <dl
            class="info_dl"
          >
            <dt>
              Total Liquid STAKE
            </dt>
             
            <dd
              id="loose_tokens"
            >
              
              9,008.256
            
            </dd>
          </dl>
        </div>
         
        <div
          class="column"
        >
          <dl
            class="info_dl"
          >
            <dt>
              Total Delegated STAKE
            </dt>
             
            <dd
              id="bonded_tokens"
            >
              
              18,056.799
            
            </dd>
          </dl>
        </div>
      </div>
    </div>
     
    <table
      class="blocks data-table"
    >
      <thead>
        <panelsort-stub
          properties="[object Object],[object Object]"
        />
      </thead>
       
      <tbody>
        <tr
          class="block data-table__row"
        >
          <td>
            <img
              class="loading-icon"
              src="~assets/images/loader.svg"
            />
          </td>
           
          <td>
            <img
              class="loading-icon"
              src="~assets/images/loader.svg"
            />
          </td>
        </tr>
         
      </tbody>
    </table>
  </template>
</tmpage-stub>
`;
